# matrix

./: .gitignore  CMakeLists.txt  Makefile  matrix
src/: algebra.hpp  main.cpp  matrix.hpp  vector.hpp
src/tests/: test.cpp  test.hpp  test_basic_arithmetic.cpp  test_constraints.cpp  test_cosine.cpp  test_cross_product.cpp  test_determinant.cpp  test_dot_product.cpp  test_inverse.cpp  test_linear_combination.cpp  test_linear_interpolation.cpp  test_matrix_multiplication.cpp  test_norm.cpp  test_rank.cpp  test_row_echelon.cpp  test_trace.cpp  test_transpose.cpp
